some css changes

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,16 @@ dist-ssr
 .env.local
 .env.*.local
 
+# Build artifacts
+build/
+
+# Distribution files
+dist/
+
+# Firebase configuration
+.firebase/
+
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
