--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          firebaseServiceAccount: ${{ FIREBASE_SERVICE_ACCOUNT_REACT_CHAT_APPLICATION_F94E9 }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_REACT_CHAT_APPLICATION_F94E9 }}
           projectId: react-chat-application-f94e9
           channelId: live
