--- a/.gitignore
+++ b/.gitignore
@@ -24,14 +24,13 @@ dist-ssr
 # Build artifacts
 build/
 
-# Distribution files
-dist/
-
 # Firebase configuration
 .firebase/
 
 # Firebase key
 react-chat-application-f94e9-96df1f2b9369.json
+firebase-hosting-merge.yml
+firebase-hosting-pull-request.yml
 
 # Editor directories and files
 .vscode/*
