--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - main
 
+  pull_request:
+    branches:
+      - main
+
 env:
   VITE_REACT_APP_FIREBASE_API_KEY: ${{ secrets.VITE_REACT_APP_FIREBASE_API_KEY }}
   VITE_REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_REACT_APP_FIREBASE_AUTH_DOMAIN }}
@@ -19,27 +23,34 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@main
+
       - name: Install Dependencies
         run: npm install
+
       - name: Build
         run: npm run build
+
       - name: Archive Production Artifact
         uses: actions/upload-artifact@main
         with:
           name: dist
           path: dist
+
   deploy:
     name: Deploy
     needs: build
+
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@main
+
       - name: Download Artifact
         uses: actions/download-artifact@main
         with:
           name: dist
           path: dist
+
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
